Wed Jan  4 08:50:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/cleanbuilds.sh:
        * bin/mail_test_stats.sh:
          Accept date and email as arguments

Tue Jan  3 18:47:23 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/performance_stats.sh:
        * bin/topinfo_iorsize_stats.sh:
        * bin/topinfo_simple_stats.sh:
        * bin/topinfo_stats.sh:
          Assume ACE_ROOT is set before running the script, simplified the usage

Tue Jan  3 18:34:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Added default suppress file that can be used for valgrind when using
          valgrind for ACE/TAO/CIAO/DAnCE

        * docs/bczar/bczar.html:
          Added package

Tue Jan  3 13:51:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/performance_stats.sh:
          Create source directory

Tue Jan  3 12:52:04 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/performance_stats.sh:
        * bin/topinfo_iorsize_stats.sh:
        * bin/topinfo_simple_stats.sh:
        * bin/topinfo_stats.sh:
        * bin/footprint_stats.sh:
          Converting them to support a flat layout

Tue Jan  3 12:40:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/detailed_footprint.shtml:
        * html/Stats/detailed_performance.shtml:
        * html/Stats/footer.html:
        * html/Stats/index.shtml:
        * html/Stats/navigation.html:
          Updated links, docu, status

        * html/Stats/compilation.shtml:
          Removed this file.

Sat Dec 31 22:12:53 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Timer_Wheel_T.cpp: Changed the call to "delete root" in the
          destructor to "this->free_node (root)" so the ACE_Timer_Wheel_T
          will work properly when provided a custom allocator.  Thanks to
          Koh <k_onishi at mtj dot biglobe dot ne dot jp> for reporting