@@ -1,3 +1,8 @@
+Wed Jan  4 11:06:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/generate_compile_stats.sh:
+          Updated title to include DAnCE
+
 Wed Jan  4 08:50:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/cleanbuilds.sh:
